--- a/javascript/i18n/phonenumbers/phonenumberutil_test.html
+++ b/javascript/i18n/phonenumbers/phonenumberutil_test.html
@@ -21,7 +21,7 @@ limitations under the License.
 -->
 <head>
 <title>libphonenumber Unit Tests - i18n.phonenumbers - phonenumberutil.js</title>
-<script src="../../../../closure-library/closure/goog/base.js"></script>
+<script src="../../vendor/closure-library/closure/goog/base.js"></script>
 <script>
   goog.require('goog.proto2.Message');
 </script>
